kubernetes-network-policy/allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: orders-egress-internal
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: orders-service
      env: prod
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
              role: db
              env: prod
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: kafka-broker
              role: messaging
              env: prod
      ports:
        - protocol: TCP
          port: 9092
    - to:
        - podSelector:
            matchLabels:
              app: kafka-schema-registry
              role: messaging
              env: prod
      ports:
        - protocol: TCP
          port: 8081
